<resources>
    <string name="app_name">Word\'s World</string>
    <string name="title_profile">Profil</string>
    <string name="app_title_nav">Word\'s World</string>
    <string name="search">Szukaj…</string>
    <string name="friends">Znajdz</string>
    <string name="about">O nas</string>
    <string name="taboo">Taboo</string>
    <string name="languages">Języki</string>
    <string name="achievements_title">Osiągnięcia</string>
    <string name="edit_profile_btn">Edytuj Profil</string>
    <string name="no_of_followings">Obserwowani:</string>
    <string name="dictionary">Słownik</string>
    <string name="password_input">Hasło</string>
    <string name="log_in_btn">Zaloguj</string>
    <string name="create_acc_in_case">Nie masz jeszcze konta? Stwórz je!</string>
    <string name="username_inpt">Nazwa użytkownika</string>
    <string name="email_inpt">Email</string>
    <string name="create_btn">Stwórz</string>
    <string name="login_in_Case">Masz już konto? Zaloguj się!</string>
    <string name="settings_lbl">Ustawienia</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="submit_changes">Zapisz</string>
    <string name="accept">Zaakceptuj</string>
    <string name="reject">Odrzuć</string>
    <string name="enter_phrase_here">Wpisz tekst do przetłumaczenia…</string>
    <string name="translation">Tłumaczenie</string>
    <string name="TRANSLATE">PRZETŁUMACZ</string>
    <string name="overall_score">Wynik:</string>
    <string name="your_overall_score">Twój wynik:</string>
    <string name="log_out">Wyloguj się</string>
    <string name="fiche_nav_title">Fiszki</string>
    <string name="flashcards">Fiszki</string>
    <string name="fa_icon_taboo_master">&#xf504;</string>
    <string name="fa_icon_dictionary_master">&#xf02d;</string>
    <string name="fa_icon_id_card">&#xf2bb;</string>
    <string name="fa_icon_friends">&#xf500;</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="start">START</string>
    <string name="your_efficiency">Twoja efektywność:</string>
    <string name="cards_count">Ilość kart</string>
    <string name="lang">Język</string>
    <string name="define_game_settings">Zdefiniuj ustawienia gry</string>
    <string name="my_cards">Moje Karty</string>
    <string name="add">DODAJ</string>
    <string name="key_word">Słowo kluczowe…</string>
    <string name="black_word">Słowo zablokowane…</string>
    <string name="used_cards">Ilość użytych kart:</string>
    <string name="correct_cards">Odgadniętych kart:</string>
    <string name="type_translation">Podaj tłumaczenie słowa...</string>
    <string name="incorrect_msg">Błąd :( próbuj dalej!</string>
    <string name="correct_msg">Dobrze!</string>
    <string name="check">Sprawdź!</string>
</resources>
