<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/src_language"
        android:layout_weight="0.75"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_weight="2"
        android:id="@+id/to_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:hint="@string/enter_phrase_here" />

    <ImageView
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        app:srcCompat="@drawable/ic_import_export" />

    <Spinner
        android:layout_weight="0.75"
        android:id="@+id/target_language"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_weight="9"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/primary_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/translated_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/meaning"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray"
        android:onClick="meaning"
        android:scaleType="fitXY"
        android:src="@drawable/ic_open_in_browser"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="731dp" />

    <ImageButton
        android:id="@+id/voice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray"
        android:onClick="speak"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_voice"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="731dp" />

    <Button
        android:id="@+id/translate"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:textColor="@color/icons"
        android:text="@string/TRANSLATE"
        android:onClick="translate" />
</LinearLayout>

