<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/taboo_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/icons"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center|start"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/key_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:hint="@string/key_word"
                android:textAlignment="center"
                android:textColor="@color/primary_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- BLACK LIST -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/BL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:hint="@string/black_word"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/BL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:hint="@string/black_word"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/BL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:hint="@string/black_word"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/BL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:hint="@string/black_word"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/BL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:hint="@string/black_word"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="start|bottom" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Spinner
        android:id="@+id/language"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taboo_card" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primary_dark"
        android:text="@string/add"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/language" />
</android.support.constraint.ConstraintLayout>